examples/v0.4/errors/unknown_property_declaration.nova
User: M = {
    name: S
}

user: User = {
    name = "Varun",
    city = "Mumbai"
}

/*
Expected Error:

Unknown property 'city'.
*/